--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Generales  */
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -17,6 +18,7 @@ body {
     display: none;
 }
 
+/* Navbar (general) */
 .menu {
     display: none;
 }
@@ -98,6 +100,7 @@ nav {
 
 }
 
+/* Menu en desktop */
 .desktop-menu {
     position: absolute;
     top: 58px;
@@ -142,6 +145,46 @@ nav {
     display: inline-block;
 }
 
+/* Menu en mobile */
+.mobile-menu {
+    padding: 24px;
+    position: absolute;
+    top: 60px;
+}
+
+.mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    /* margin-bottom: 24px; */
+
+}
+
+.mobile-menu ul {
+    padding: 0;
+    margin: 22px 0 0 0;
+    list-style: none;
+}
+
+.mobile-menu ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+}
+
+.mobile-menu ul li {
+    margin-bottom: 24px;
+}
+
+.email {
+    font-size: var(--sm);
+    font-weight: 300 !important;
+
+}
+
+.sign-out {
+    font-size: var(--sm);
+    color: var(--hospital-green) !important;
+}
+
 @media(max-width:640px) {
     .menu {
         display: block;
@@ -155,4 +198,13 @@ nav {
         display: none;
     }
 
+    .desktop-menu {
+        display: none;
+    }
+}
+
+@media (min-width: 641px) {
+    .mobile-menu {
+        display: none;
+    }
 }
