--- a/styles.css
+++ b/styles.css
@@ -147,9 +147,12 @@ nav {
 
 /* Menu en mobile */
 .mobile-menu {
+    background-color: var(--white);
     padding: 24px;
     position: absolute;
     top: 60px;
+    left: 0;
+    width: 100%;
 }
 
 .mobile-menu a {
@@ -186,13 +189,89 @@ nav {
 }
 
 /* Aside */
-.product-detail {
+aside {
     width: 360px;
-    padding: 0 24px;
-    box-sizing: border-box;
+    background-color: var(--white);
     position: absolute;
     right: 0;
 }
+
+#shopoingCartContainer {
+
+    padding: 0 24px;
+}
+
+.product-detail-close {
+    background: var(--white);
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+}
+
+.product-detail-close:hover {
+    cursor: pointer;
+}
+
+#productDetail>img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+
+}
+
+#productDetail .product-info {
+
+    margin: 0 24px;
+
+}
+
+
+#productDetail .product-info p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 24px;
+    margin-bottom: 4px;
+}
+
+#productDetail .product-info p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 4px;
+    margin-bottom: 36px;
+}
+
+#productDetail .product-info p:nth-child(3) {
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top: 4px;
+    margin-bottom: 36px;
+}
+
+.primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+}
+
+.add-to-card-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Shopping crad */
 
 .title-container {
     display: flex;
@@ -295,7 +374,7 @@ nav {
     object-fit: cover;
 }
 
-.product-info {
+.product-card .product-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -303,23 +382,23 @@ nav {
 
 }
 
-.product-info figure {
+.product-card .product-info figure {
     margin: 0;
 }
 
-.product-info figure img {
+.product-card .product-info figure img {
     width: 35px;
     height: 35px;
 }
 
-.product-info div p:nth-child(1) {
+.product-card .product-info div p:nth-child(1) {
     font-weight: bold;
     font-size: var(--md);
     margin-top: 0px;
     margin-bottom: 4px;
 }
 
-.product-info div p:nth-child(2) {
+.product-card .product-info div p:nth-child(2) {
     color: var(--very-light-pink);
     font-size: var(--sm);
     margin-top: 0px;
@@ -343,7 +422,7 @@ nav {
         display: none;
     }
 
-    .product-detail {
+    .aside {
         width: 100%;
     }
 
